feat: gui (#33)
Create a GUI using fyne
