# server/api_spec.json
@@ -97,5 +97,30 @@
             }
          }
       }
+   },
+   "/search": {
+      "POST": {
+         "description": "Search for a product by title. Will fuzzy match by regex",
+         "consumes": "plain/text",
+         "parameters": {
+            "in": "body",
+            "description": "Search query"
+         },
+         "responses": {
+            "application/json": {
+               "description": "List of products from database",
+               "schema": {
+                  "type": "array",
+                  "items": {
+                     "title": "string",
+                     "average_discount": "number",
+                     "average_price": "number",
+                     "discount_percentage": "number",
+                     "appearances": "number"
+                  }
+               }
+            }
+         }
+      }
    }
 }
